# FlatCrawler

./: CMakeLists.txt
flat-crawler/: CMakeLists.txt
flat-crawler/source/: main.cpp
flat-crawler/source/crawler/: guess_machine.h  property.cpp  property.h  property_type.h  root.cpp  root.h  sequence.cpp  sequence.h
flat-crawler/source/crawler/schema/: writer.cpp  writer.h
flat-crawler/source/crawler/sequence/: struct.cpp  struct.h  table.cpp  table.h  vector.cpp  vector.h
flat-crawler/source/crawler/types/: table.cpp  table.h
test/: generate.bat  monster_generated.h  output.fbs  test1_streaming.json
test/schema/monster/: compile.bat  monster.fbs  monsterdata.json
test/sctx/: test1.sctx
